Tweak to button spacing on homepage, sharer URL fix

--- a/source/stylesheets/modules/_blockquote.scss
+++ b/source/stylesheets/modules/_blockquote.scss
@@ -55,6 +55,7 @@ blockquote {
   }
 
   &.testimonial-quote--home {
+    padding-bottom: 40px;
     @include transition(opacity,0.4);
     @include em-min-width($breakpoint_tablet) {
       img {
